Fix right now weather overflowing again. Grr.

--- a/widgets/weather/weather.scss
+++ b/widgets/weather/weather.scss
@@ -21,7 +21,7 @@ $info-small: 16px;
 
   #current, #today, #week {
     height: 100%;
-    padding: 25px 12px;
+    padding: 25px 12px 0 12px;
   }
 
   .title {
